--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -17,10 +17,10 @@
             </intent-filter>
         </activity>
         <activity android:name="com.yannick.diary.DiaryEntryActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>        
+	<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>       
         
         </activity>
 		<activity android:name="com.yannick.camera.CameraEmulatorActivity">                
